--- a/hello/lib/hello_web/templates/page/index.html.eex
+++ b/hello/lib/hello_web/templates/page/index.html.eex
@@ -8,6 +8,9 @@
     <h2>Resources</h2>
     <ul>
       <li>
+        <%= link "映画レビュー", to: Routes.movie_path(@conn, :index) %>
+      </li>
+      <li>
         <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
       </li>
       <li>
